# hopp-time-series

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb  first-model.ipynb  linear-regression-log-exp.ipynb  preprocessing_v1.ipynb
notebooks/utils/: analysis.py  data.py
