[tool.poetry]
name = "hopp-time-series"
version = "0.1.0"
description = "Hopp time series competition"
authors = ["Facu Palavecino <facundo.palavecino@muttdata.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
jupyter = "^1.0.0"
pandas-profiling = "^3.2.0"
ipykernel = "^6.15.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
